# SLAMingGroundRobot

./: README.md
frontier_exploration/include/frontier_exploration/: bounded_explore_layer.h  frontier_search.h  geometry_tools.h
frontier_exploration/launch/: global_map.launch
frontier_exploration/plugins/: bounded_explore_layer.cpp
frontier_exploration/src/: frontier_search.cpp
serialomni3wd/: CMakeLists.txt  package.xml
serialomni3wd/include/SONAR/: SONAR.cpp
sgr_bringup/: CMakeLists.txt  package.xml
sgr_bringup/launch/: main.launch  testLaser.launch
sgr_bringup/src/: explore.py  timer.py
sgr_driver/: CMakeLists.txt
sgr_driver/include/SONAR/: SONAR.h
sgr_driver/src/: odom_publisher.cc  omniSerialCommunicator.cc  square.cc  square.cc.save
sgr_navigation/: CMakeLists.txt  CMakeLists.txt~  package.xml
sgr_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
sgr_navigation/launch/: amcl_omni.launch  move_base.launch
slam_gmapping/gmapping/: CMakeLists.txt  package.xml
