<?xml version="1.0"?>
<package>
  <name>sgr_driver</name>
  <version>0.0.1</version>
  <description>The serialomni3wd package</description>
  <maintainer email="mickboe23@hotmail.com">Mick Boe</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
</package>
